WebKit fails to build with musl libc library https://bugs.webkit.org/show_bug.cgi?id=152625

Patch by Khem Raj <raj.khem@gmail.com> on 2016-01-03
Source/JavaScriptCore:

Reviewed by Daniel Bates.

Qualify isnan() calls with std namespace.

* runtime/Options.cpp:
(Option::operator==): Add std namespace qualifier.

Source/WebCore:

Reviewed by Daniel Bates and Alexey Proskuryakov.

malloc_trim is glibc specific API so guard it with __GLIBC__.

* platform/linux/MemoryPressureHandlerLinux.cpp:
(MemoryPressureHandler::platformReleaseMemory): Guard malloc_trim()
call with __GLIBC_.

Source/WTF:

Reviewed by Daniel Bates.

Disable ctype.h check for musl C library on Linux.
Enable backtrace on Linux when using glibc.
We don't have backtrace() implemented on non-glibc system
C libraries on Linux e.g. musl.

* wtf/DisallowCType.h: Check for __GLIBC__.
* wtf/Assertions.cpp:
(WTFGetBacktrace): Check if libc is glibc.

Canonical link: https://commits.webkit.org/170756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194518 268f45cc-cd09-0410-ab3c-d52691b4dbfc